# cmake_skeleton

./: .gitignore  CMakeLists.txt  README.md  create_cmake_project.sh  create_test_environment.sh  get_efs_header.sh
src/: CMakeLists.txt  my_test.cpp  my_test.h
